variables.RunHalf.scala.error
Compilation error:
RunHalf:3: error: not found: value biscuits
while (2 * biscuits != caseOrange + 1) {
           ^RunHalf:6: error: not found: value NumBiscuit
  NumBiscuit = NumBiscuit + 1
  ^